fix for clipped trash icon (safari)

--- a/src/main/webapp/js/components/interface/query/query.less
+++ b/src/main/webapp/js/components/interface/query/query.less
@@ -123,8 +123,8 @@
 }
 
 #querybuilder .query-item-button {
-	height: 20px;
-	width: 30px;
+	height: 40px;
+	width: 40px;
 	margin: 0px;
 	background: none !important;
 	color: @primary_color;
